--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,7 +3,7 @@ import Layout from "../layouts/Layout.astro";
 import Card from "../components/Card.astro";
 ---
 
-<Layout title="Welcome to Astro.">
+<Layout title="Anil Portfolio">
   <main>
     <div class="flex justify-center">
       <div class="w-[100%] p-4 md:p-0 md:w-[40%] bg-[#121212]">
@@ -266,7 +266,7 @@ import Card from "../components/Card.astro";
                     daily rountines
                   </p>
                   <button
-                    class="text-xs mt-2 bg-red-400 text-slate-200 p-1 rounded-lg"
+                    class="text-xs mt-2 bg-red-400 text-slate-200 p-1 rounded-lg border-0"
                   >
                     <a
                       target="_blank"
@@ -314,7 +314,11 @@ import Card from "../components/Card.astro";
               <table>
                 <tr class="h-16">
                   <td>
-                    <img src="/settlin.png" class="w-16 px-4 rounded-[10%]" />
+                    <img
+                      src="/settlin.png"
+                      width="32rem"
+                      class="px-4 rounded-[10%]"
+                    />
                   </td>
                   <td>
                     <div class="mb-2 mr-4">
@@ -329,7 +333,11 @@ import Card from "../components/Card.astro";
                 </tr>
                 <tr class="h-16">
                   <td>
-                    <img src="/ict.png" class="w-16 px-4 rounded-[10%]" />
+                    <img
+                      src="/ict.png"
+                      width="32rem"
+                      class="px-4 rounded-[10%]"
+                    />
                   </td>
                   <td>
                     <div class="mr-2">
@@ -344,7 +352,7 @@ import Card from "../components/Card.astro";
                 </tr>
               </table>
               <button
-                class="w-[100%] mt-4 text-gray-100 p-2 rounded-lg text-sm bg-blue-600"
+                class="w-[100%] mt-4 text-gray-100 p-2 rounded-lg text-sm bg-blue-600 border-0"
               >
                 <div class="pr-4 cursor-pointer flex justify-center">
                   <a
